--- a/css/Style.css
+++ b/css/Style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-  font-family: 'Lato', sans-serif;  
+  font-family: 'Sofia', sans-serif;  
 }
 
 .row{
@@ -14,13 +14,13 @@ body{
 
 .menu-title{
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 .container{
  position: relative;
- top:60px;
- margin: 15px; 
+ top:50px;
+ margin: 25px; 
 }
 
 .item{
@@ -49,15 +49,15 @@ body{
 }
 
 #title-one {
-  background-color: #D59898;
+  background-color: #d59898;
 } 
 
 #title-two{
-  background-color: #C14543;
+  background-color: #c14543;
 }
 
 #title-three{
-  background-color: #E5D198;
+  background-color: #e5D198;
 }
 
 /* Simple Responsive Framework. */
