--- a/css/Style.css
+++ b/css/Style.css
@@ -61,7 +61,11 @@ body{
 }
 
 /* Simple Responsive Framework. */
-/*------ Desktop ------*/
+.row {
+  width: 100%;
+}
+
+/********** Large device **********/
 @media (min-width: 992px){
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;  
@@ -106,7 +110,7 @@ body{
 }
 
 
-/*------ Tablet ------*/
+/********** Medium device **********/
 @media (min-width: 768px) and (max-width: 991px){
   .col-lg-4 {
     width: 50%;
@@ -119,7 +123,7 @@ body{
 }
 
 
-/*------ Mobile ------*/
+/********** Small device **********/
 @media (max-width: 767px){
   .col-lg-4{
     width: 100%;
